--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@
 title: chanjun-park's blog
 email: pcj01142@gmail.com
 description: #>- # this means to ignore newlines until "baseurl:"
-  배운 것들을 기록하고 나만의 것으로 표현하기
-  모자란 생각이라도 감히 끄적여보기
-  내 자신을 솔직히 보여주기
+  배운 것들을 기록하고 나만의 것으로 표현하기.
+  모자란 생각이라도 감히 끄적여보기.
+  내 자신을 솔직히 보여주기.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
